--- a/src/main/resources/form.fxml
+++ b/src/main/resources/form.fxml
@@ -10,7 +10,8 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox spacing="10" xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fm.bootifulpodcast.desktop.FormController">
+<VBox spacing="10" xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="fm.bootifulpodcast.desktop.FormController">
 
     <padding>
         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
