--- a/src/main/resources/progress-screen.fxml
+++ b/src/main/resources/progress-screen.fxml
@@ -2,15 +2,11 @@
 
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane xmlns="http://javafx.com/javafx/8.0.999-ea"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="fm.bootifulpodcast.desktop.ProgressController">
-    <center>
-        <VBox>
-            <Label fx:id="processingLabel" text="please hold..." textAlignment="CENTER" VBox.vgrow="ALWAYS" />
-            <Hyperlink fx:id="downloadMediaHyperlink" text="click me" textAlignment="CENTER" VBox.vgrow="ALWAYS" />
-        </VBox>
-    </center>
-</BorderPane>
+<VBox alignment="CENTER" style="-fx-border-color: red" xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fm.bootifulpodcast.desktop.ProgressController">
+
+    <Label fx:id="processingLabel" text="please hold..." textAlignment="CENTER" VBox.vgrow="ALWAYS" />
+    <Hyperlink fx:id="downloadMediaHyperlink" text="click me" textAlignment="CENTER" VBox.vgrow="ALWAYS" />
+
+</VBox>
