--- a/src/main/resources/progress-screen.fxml
+++ b/src/main/resources/progress-screen.fxml
@@ -4,7 +4,8 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" style="-fx-border-color: red" xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fm.bootifulpodcast.desktop.ProgressController">
+<VBox alignment="CENTER" xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="fm.bootifulpodcast.desktop.ProgressController">
 
     <Label fx:id="processingLabel" text="please hold..." textAlignment="CENTER" VBox.vgrow="ALWAYS" />
     <Hyperlink fx:id="downloadMediaHyperlink" text="click me" textAlignment="CENTER" VBox.vgrow="ALWAYS" />
