--- a/src/main/resources/progress-screen.fxml
+++ b/src/main/resources/progress-screen.fxml
@@ -3,9 +3,12 @@
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.image.ImageView?>
-<VBox alignment="CENTER" xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1"
+
+<VBox fx:id="root"
+      alignment="CENTER"
+      xmlns="http://javafx.com/javafx/8.0.999-ea"
+      xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="fm.bootifulpodcast.desktop.ProgressController">
 
     <Hyperlink fx:id="downloadMediaHyperlink" text="click me" textAlignment="CENTER" VBox.vgrow="ALWAYS" />
